웹사이트 완성

--- a/2.html
+++ b/2.html
@@ -4,16 +4,24 @@
   <title>My Class</title>
   <meta charset="utf-8">
 </head>
-<body>
-  <hi><a href="index.html">내 수업들의 기록</a></h1>
+<body bgcolor="#F0F8FF">
+  <CENTER><h1><p style="margin-top:50px;"><a href="index.html">나의 수업 기록</a></h1></CENTER>
   <ul>
-    <li><a href="1.html">국어국문과</a></li>
-    <li><a href="2.html">디지털인문예술학과</a></li>
-    <li><a href="3.html">카카오페이지</a></li>
+    <li><a href="1.html">국어국문학과 수업</a></li>
+    <li><a href="2.html">디지털인문예술학과 수업</a></li>
+    <li><a href="3.html">교양 수업</a></li>
   </ul>
-  <h2>디지털인문예술학과</h2>
-  <h3>웹툰이란?</h3>
-  <p><a href="https://sites.google.com/view/dah-hallym" target="_blank" title="한림대학교 디지털인문예술학과 사이트"</title></title><strong><U>국어국문학과</U></strong></a> 인터넷을 통해서 배포되고 연재되는 만화를 의미하는 말로, 2000년대 초반부터등장하였다. 초반에는 개인 블로그를 통해서 업로드 되는 만화에서 시작하였지만 2003년 다음이 만든 '만화 속 세상'을 시작으로 웹툰을 서비스하는 플랫폼들이 생겨나면서 2010년대 후반에 이르러서 급성장을 보이며 현재에는 누구나 쉽게 접할 수 있는 서비스가 되었다.</p>
-  그 중에서도 우리나라에서 가장 대표적으로 사용되는 웹툰 플랫폼은 네이버에서 제공하는 '네이버 웹툰'과 카카오에서 제공하는 '카카오페이지'이다.
+  <h2>디지털인문예술학과의 교육 목표</h2><img src="디인예 목표.png" width="100%">
+  <h2>나의 수강 목록</h2>
+    <ul>
+      <li><p style="margin-top:40px;"><strong>디지털인문예술입문</strong></li>
+        현재 수강 중인 수업이다. 이름처럼 디지털인문예술이라는 분야를 처음 접하는 학생들을 위한 수업이다. Digital, Art, Humanities가 합쳐진 디지털인문예술이 뜻하는 의미에 대해서 이해하고 구글 사이트나 구글 애널리틱스, 피그마, html 등 앞으로의 디지털인문예술학과 수업에서 여러가지의 유의미한 것들을 만들어내는데에 필요한 기초들을 배우고 있다. 또 한림대학교 유튜브 랩같은 여러 유튜브, 사이트 등 유용한 정보들을 접하는 방법을 배우는 것도 도움이 많이 되는 것 같다.
+        <p style="margin-top:40px;"><iframe width="560" height="315" src="https://www.youtube.com/embed/EUqOO6KnQHQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <li><p style="margin-top:40px;"><strong>신화 구조와 이야기의 원형</strong></li>
+        현재 수강 중인 수업이다. 창조신화, 건국신화, 영웅신화 등등 여러 신화들 속에서 찾아볼 수 있는 '원형'에 대해서 알아보고 그것이 현대의 콘텐츠에는 어떤식으로 활용되는지 또 어떻게 활용할 수 있는지를 배우는 수업이다. 단순히 여러 신화들에는 공통점이 있다를 넘어서 왜? 라는 근본적인 부분에 대해서 생각해 볼 수 있는 수업인 것 같다. 원형에 대해서 배우면서 글을 읽을 때 그 글의 의미에 대해서 여러 관점에서 해석하는 시각을 배우고 있다.
+    </ul>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
