--- a/3.html
+++ b/3.html
@@ -4,16 +4,22 @@
   <title>My Class</title>
   <meta charset="utf-8">
 </head>
-<body>
-  <hi><a href="index.html">내 수업들의 기록</a></h1>
+<body bgcolor="#F0F8FF">
+  <CENTER><h1><p style="margin-top:50px;"><a href="index.html">나의 수업 기록</a></h1></CENTER>
   <ul>
     <li><a href="1.html">국어국문학과 수업</a></li>
-    <li><a href="2.html">네이버 웹툰</a></li>
-    <li><a href="3.html">카카오페이지</a></li>
+    <li><a href="2.html">디지털인문예술학과 수업</a></li>
+    <li><a href="3.html">교양 수업</a></li>
   </ul>
-  <h2>웹툰</h2>
-  <h3>웹툰이란?</h3>
-  <p><a href="https://korean.hallym.ac.kr/korean/index.do" target="_blank" title="한림대학교 국어국문학전공 사이트"</title></title><strong><U>국어국문학과</U></strong></a> 인터넷을 통해서 배포되고 연재되는 만화를 의미하는 말로, 2000년대 초반부터등장하였다. 초반에는 개인 블로그를 통해서 업로드 되는 만화에서 시작하였지만 2003년 다음이 만든 '만화 속 세상'을 시작으로 웹툰을 서비스하는 플랫폼들이 생겨나면서 2010년대 후반에 이르러서 급성장을 보이며 현재에는 누구나 쉽게 접할 수 있는 서비스가 되었다.</p>
-  그 중에서도 우리나라에서 가장 대표적으로 사용되는 웹툰 플랫폼은 네이버에서 제공하는 '네이버 웹툰'과 카카오에서 제공하는 '카카오페이지'이다.
+  <h2>나의 수강 목록</h2>
+  (전공이나 복수전공 수업에 비헤 많은 교양을 들었기 때문에 특별히 기억에 남았던 3가지를 골랐습니다.)
+    <ul>
+      <li><p style="margin-top:40px;"><strong>환경과 문학</strong></li>
+        처음에는 '환경'에 대한 좁은 의미만을 생각하여 자연과 관련된 내용일거라 예상했지만 수업에서 다루는 환경은 내 방, 집 같은 내 주변의 공간적인 환경과 문학 작품 속에 드러난 사회의 모습 같은 사회적인 환경 등 내가 처음 생각했던 환경의 의미를 포함한 더 넓은 의미의 환경이었다. 여러가지 뮤지컬, 책, 뉴스 등 매체들 통해서 다양한 주제에 대해서 이야기하고 그걸 매주 한장 분량의 글로 적는 과제를 통해서 많은 것을 생각해볼 수 있었고 또 그걸 글로 정리하는 연습도 됐던 것 같다.
+      <li><p style="margin-top:40px;"><strong>영상문학</strong></li>
+        실제로 영화를 보고 심리적인 관점에서 영화에 대한 이야기를 나눠보는 수업이다. 주인공의 서사와 인물들의 관계, 감독의 연출 의도 등등 여러 부분을 프로이트와 융의 이론을 활용해서 해석해보았고 기말 과제로 실제 이 이론들을 적용해서 하나의 인물을 디자인해보면서 심리학이라는 분야에 대해서 많이 배울 수 있었다.
+      <li><p style="margin-top:40px;"><strong>창의코딩</strong></li>
+        코딩이라는 이름 때문에 또 파이썬을 배울거라고 예상했지만 포토샵에 대한 수업이었다. 포토샵이 굉장히 여러가지로 활용된다는 것은 알고 있지만 너무 많은 기능이 있고 혼자 시도하기에는 어렵게만 느껴져서 한번도 도전해보지 못하고 있었는데 필수 교양으로 접하게 되니 좋은 기회가 됐다고 생각한다. 또 각각의 예시를 들어주시면서 핵심적인 기능과 요소들을 쉽게 설명해주셔서 포토샵의 기본적인 내용에 대해서 많이 배울 수 있었다.
+    </ul>
 </body>
 </html>
