--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <title>My Class</title>
   <meta charset="utf-8">
 </head>
-<body>
-  <h1><a href="index.html">내 수업들의 기록</a></h1>
+<body bgcolor="#F0F8FF">
+  <CENTER><h1><p style="margin-top:50px;"><a href="index.html">나의 수업 기록</a></h1></CENTER>
   <ul>
     <li><a href="1.html">국어국문학과 수업</a></li>
     <li><a href="2.html">디지털인문예술학과 수업</a></li>
     <li><a href="3.html">교양 수업</a></li>
   </ul>
-  <h2>내가 들었던 수업들의 기록</h2>
-  <p>저는 현재 한림대학교에 재학중인 21학번 석솔미입니다. 저는 주전공으로는 국어국문학을 전공하고 있고 복수전공으로는 디지털인문예술전공을 전공하고 있습니다.</p>
+  <h2>나의 목표</h2>
+  <p>저는 아직 확실한 진로를 정하지는 못했지만 좋아하는 웹툰과 관련된 일을 하면 좋을 것 같다고 생각하고 있습니다. 제가 국어국문학과를 전공으로 선택하고 디지털인문예술학과를 복수전공으로 선택한 것은 여러가지를 많이 접해보고 싶었기 때문입니다.<br> 국어국문학과에서 여러가지 작품들을 접하고 또 그러한 작품들에 대해서 다양한 시각을 배우면서 단순히 재미 뿐만 이야기에 대해서 더 깊고 넓게 생각하는 사람이 될 수 있을거라고 생각했습니다.
+  또 디지털인문예술학과에서는 여러가지 작업에 대해서 배우고 싶었습니다. 인문학적인 이야기를 디지털적으로 표현해내고 발전시키는 디지털인문예술의 여러가지 수업들을 통해서 웹툰과 관련해서 정확히 어떤 일을 하고 싶은지 더 구체화할 수 있을거라고 생각했습니다. 또 웹툰이라는 분야도 하나의 문학과 디지털의 융합이라고 생각하기 때문에 웹툰에 대해서도 더 많은 것을 알게 될 수 있을거리고 생각하고 있습니다.</p>
 </body>
 </html>
