웹사이트 완성

--- a/1.html
+++ b/1.html
@@ -11,7 +11,7 @@
     <li><a href="2.html">디지털인문예술학과 수업</a></li>
     <li><a href="3.html">교양 수업</a></li>
   </ul>
-  <h2>국어국문학과의 교육 목표</h2><CENTER><img src="국어국문 목표.png" width="80%"></CENTER>
+  <h2><a href="https://korean.hallym.ac.kr/korean/index.do" target="_blank" title"한림대학교 국어국문학 전공">국어국문학과</a>의 교육 목표</h2><CENTER><img src="국어국문 목표.png" width="80%"></CENTER>
   <h2>나의 수강 목록</h2>
     <ul>
       <li><p style="margin-top:40px;"><strong>국어학개론</strong></li>
