--- a/2.html
+++ b/2.html
@@ -11,7 +11,7 @@
     <li><a href="2.html">디지털인문예술학과 수업</a></li>
     <li><a href="3.html">교양 수업</a></li>
   </ul>
-  <h2>디지털인문예술학과의 교육 목표</h2><img src="디인예 목표.png" width="100%">
+  <h2><a href="https://sites.google.com/view/dah-hallym" target="_blank" title"한림대학교 디지털인문예술전공">디지털인문예술학과</a>의 교육 목표</h2><img src="디인예 목표.png" width="100%">
   <h2>나의 수강 목록</h2>
     <ul>
       <li><p style="margin-top:40px;"><strong>디지털인문예술입문</strong></li>
