--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <li><a href="3.html">교양 수업</a></li>
   </ul>
   <h2>나의 목표</h2>
-  <p>저는 아직 확실한 진로를 정하지는 못했지만 좋아하는 웹툰과 관련된 일을 하면 좋을 것 같다고 생각하고 있습니다. 제가 국어국문학과를 전공으로 선택하고 디지털인문예술학과를 복수전공으로 선택한 것은 여러가지를 많이 접해보고 싶었기 때문입니다.<br> 국어국문학과에서 여러가지 작품들을 접하고 또 그러한 작품들에 대해서 다양한 시각을 배우면서 단순히 재미 뿐만 이야기에 대해서 더 깊고 넓게 생각하는 사람이 될 수 있을거라고 생각했습니다.
-  또 디지털인문예술학과에서는 여러가지 작업에 대해서 배우고 싶었습니다. 인문학적인 이야기를 디지털적으로 표현해내고 발전시키는 디지털인문예술의 여러가지 수업들을 통해서 웹툰과 관련해서 정확히 어떤 일을 하고 싶은지 더 구체화할 수 있을거라고 생각했습니다. 또 웹툰이라는 분야도 하나의 문학과 디지털의 융합이라고 생각하기 때문에 웹툰에 대해서도 더 많은 것을 알게 될 수 있을거리고 생각하고 있습니다.</p>
+  <p>제가 국어국문학과를 전공으로 선택하고 디지털인문예술학과를 복수전공으로 선택한 것은 여러가지를 많이 접해보고 싶었기 때문입니다.<br> 저는 아직 확실한 진로를 정하지는 못했지만 좋아하고 제일 관심있는 분야인 웹툰과 관련된 일을 하면 좋을 것 같다고 생각하고 있습니다. 그러기 위해서 국어국문학과에서 여러가지 작품들을 접하고 또 그러한 작품들에 대해서 다양한 시각을 배워서 단순히 재미 뿐만 이야기에 대해서 더 깊고 넓게 생각하는 방법을 배울 수 있을거라고 생각했습니다. 또 디지털인문예술학과에서는 웹툰 또한 하나의 문학과 디지털의 융합으로 만들어진 것이라고 생각하기 때문에 인문학적인 이야기를 디지털적으로 표현해내고 발전시키는 디지털인문예술의 여러가지 수업들을 통해 웹툰에 대해서 더 이해할 수 있게 될거라고 생각했습니다. 그리고 디지털인문예술학과 수업에서 배우는 다양한 디자인이나 프로그래밍, 구상 등 여러 작업들을 해보면서 웹툰 관련 분야 중에서도 구체적으로 어떤 부분에서 일하고 싶은지 조금 더 진로를 구체화할 수 있을거라고 생각하고 있습니다.<br> 두 전공 수업을 통해  것을 접해보고 그것을 통해서 구체적인 진로를 확정하고 또 그것을 위한 준비를 하는 것이 제가 수업을 통해서 이루고자 하는 목표입니다.
 </body>
 </html>
