--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
   <title>My Class</title>
   <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body bgcolor="#F0F8FF">
-  <CENTER><h1><p style="margin-top:50px;"><a href="index.html">나의 수업 기록</a></h1></CENTER>
-  <ul>
-    <li><a href="1.html">국어국문학과 수업</a></li>
-    <li><a href="2.html">디지털인문예술학과 수업</a></li>
-    <li><a href="3.html">교양 수업</a></li>
-  </ul>
-  <h2>나의 목표</h2>
-  <p>제가 국어국문학과를 전공으로 선택하고 디지털인문예술학과를 복수전공으로 선택한 것은 여러가지를 많이 접해보고 싶었기 때문입니다.<br> 저는 아직 확실한 진로를 정하지는 못했지만 좋아하고 제일 관심있는 분야인 웹툰과 관련된 일을 하면 좋을 것 같다고 생각하고 있습니다. 그러기 위해서 국어국문학과에서 여러가지 작품들을 접하고 또 그러한 작품들에 대해서 다양한 시각을 배워서 단순히 재미 뿐만 이야기에 대해서 더 깊고 넓게 생각하는 방법을 배울 수 있을거라고 생각했습니다. 또 디지털인문예술학과에서는 웹툰 또한 하나의 문학과 디지털의 융합으로 만들어진 것이라고 생각하기 때문에 인문학적인 이야기를 디지털적으로 표현해내고 발전시키는 디지털인문예술의 여러가지 수업들을 통해 웹툰에 대해서 더 이해할 수 있게 될거라고 생각했습니다. 그리고 디지털인문예술학과 수업에서 배우는 다양한 디자인이나 프로그래밍, 구상 등 여러 작업들을 해보면서 웹툰 관련 분야 중에서도 구체적으로 어떤 부분에서 일하고 싶은지 조금 더 진로를 구체화할 수 있을거라고 생각하고 있습니다.<br> 두 전공 수업을 통해  것을 접해보고 그것을 통해서 구체적인 진로를 확정하고 또 그것을 위한 준비를 하는 것이 제가 수업을 통해서 이루고자 하는 목표입니다.
+  <input id="night_day" type="button" value="night" onclick="if(document.querySelector('#night_day').value === 'night'){
+                                                document.querySelector('body').style.backgroundColor = '#212326';
+                                                document.querySelector('body').style.color = 'white';
+                                                document.querySelector('#night_day').value = 'day';}
+                                              else {document.querySelector('body').style.backgroundColor = '#F0F8FF';
+                                                document.querySelector('body').style.color = 'black';
+                                                document.querySelector('#night_day').value = 'night';}">
+  <h1><a href="index.html">나의 수업 기록</a></h1>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">국어국문학과 수업</a></li>
+        <li><a href="2.html">디지털인문예술학과 수업</a></li>
+        <li><a href="3.html">교양 수업</a></li>
+      </ol>
+      <div id="article">
+        <h2>나의 목표</h2>
+        <p>제가 국어국문학과를 전공으로 선택하고 디지털인문예술학과를 복수전공으로 선택한 것은 여러가지를 많이 접해보고 싶었기 때문입니다.<br> 저는 아직 확실한 진로를 정하지는 못했지만 좋아하고 제일 관심있는 분야인 웹툰과 관련된 일을 하면 좋을 것 같다고 생각하고 있습니다. 그러기 위해서 국어국문학과에서 여러가지 작품들을 접하고 또 그러한 작품들에 대해서 다양한 시각을 배워서 단순히 재미 뿐만 이야기에 대해서 더 깊고 넓게 생각하는 방법을 배울 수 있을거라고 생각했습니다. 또 디지털인문예술학과에서는 웹툰 또한 하나의 문학과 디지털의 융합으로 만들어진 것이라고 생각하기 때문에 인문학적인 이야기를 디지털적으로 표현해내고 발전시키는 디지털인문예술의 여러가지 수업들을 통해 웹툰에 대해서 더 이해할 수 있게 될거라고 생각했습니다. 그리고 디지털인문예술학과 수업에서 배우는 다양한 디자인이나 프로그래밍, 구상 등 여러 작업들을 해보면서 웹툰 관련 분야 중에서도 구체적으로 어떤 부분에서 일하고 싶은지 조금 더 진로를 구체화할 수 있을거라고 생각하고 있습니다.<br> 두 전공 수업을 통해  것을 접해보고 그것을 통해서 구체적인 진로를 확정하고 또 그것을 위한 준비를 하는 것이 제가 수업을 통해서 이루고자 하는 목표입니다.
+      </div>
+    </div>
 </body>
 </html>
